--- a/index.eu.html
+++ b/index.eu.html
@@ -12,9 +12,10 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style.css"/>
 
         <title>ideckia</title>
+
     </head>
 
     <body class="bg-light">
@@ -27,8 +28,8 @@
                     Languages
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">English</a></li>
-                    <li><a class="dropdown-item" href="index.eu.html">Euskara</a></li>
+                    <li><a class="dropdown-item" href="index.html">English</a></li>
+                    <li><a class="dropdown-item" href="#">Euskara</a></li>
                 </ul>
             </div>
             <div class="d-flex p-3 text-white my-3 rounded">
@@ -45,16 +46,17 @@
 
                         <h1>ideckia</h1>
                         <p class="lead">
-                            Ideckia is a system to use your smartphone or tablet as a control panel to send orders to
-                            your computer. You can create a customized panel, as many directories and items per
-                            directory as you want to structure your content to fit your needs. You can use it or
-                            automations in gaming, streaming, software development, home...
+                            Smartphonea edo tableta aginte panel moduan erabiliz, ordenagailua kontrolatzeko sistema da
+                            ideckia. Panela guztiz pertsonalizagarria da, nahi adina karpeta sortu daitezke eta karpeta
+                            bakoitzean nahi adina elementu jarri daitezke zure edukia antolatuta edukitzeko.
+                            Jokogintzarako, streaming-erako, software garapenerako, etxeko eta hainbat modutako
+                            automatizazioetarako erabili daiteke.
                         </p>
                         <p>
                             <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
                                 target="_blank">
                                 <img class="w-75" alt="Google play link"
-                                    src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/en_get.svg">
+                                    src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/eu_get.svg">
                             </a>
                         </p>
                     </div>
@@ -68,11 +70,11 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Cross-platform</h5>
+                            <h5 class="card-title">Plataforma anitza</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable. Download here
-                                for your OS:</p>
+                            <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria.
+                                Zure SE-arentzat deskarga ezazu:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
@@ -91,13 +93,12 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Endless possibilities</h5>
+                            <h5 class="card-title">Aukera amaigabeak</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Execute commands, create key shortcuts, control OBS Studio, timezones,
-                                weather, countdown, timer, log your work, create random colors...</p>
-                            <a href="https://github.com/ideckia/ideckia#default-actions" target="_blank"
-                                class="btn btn-primary">Actions list</a>
+                            <p class="card-text">Komandoak exekutatu, tekla-lasterrak sortu, OBS Studio kontrolatu,
+                                ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea zure lana logeatu, ausazko
+                                koloreak sortu...</p>
 
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
                                 target="_blank" class="btn btn-primary">Ekintzen zerrenda</a>
@@ -109,57 +110,56 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Infinite directories</h5>
+                            <h5 class="card-title">Direktorio mugarik ez</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">There is no limit for directories. You can create complex panels and
-                                organize them as you want using as many directories as you need.</p>
+                            <p class="card-text">Ez dago gehienezko direktorio kopururik. Panel konplexuak sortu
+                                ditzakezu eta nahi adina direktorio eta direktorio bakoitzean nahi adina elementu
+                                prestatu hori dena behar bezala antolatzeko.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Integrated editor</h5>
+                            <h5 class="card-title">Editor integratua</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">If you have a internet browser, you have the editor right there.
-                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Go to
-                                the editor</a>
+                            <p class="card-text">Internet nabigatzaile bat baldin baduzu, hortxe duzu editorea.
+                            </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Editorera
+                                joan</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Open source</h5>
+                            <h5 class="card-title">Kode irekia</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">The entire stack is open source: server, editor, api, actions and
-                                smartphone app.</p>
-                            <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Get the
-                                sources</a>
+                            <p>Guztiz kode irekia: zerbitzaria, editorea, api-a, ekintzak eta smartphone aplikazioa.</p>
+                            <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Lortu kodea</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Easy to hack</h5>
+                            <h5 class="card-title">Hackeatzeko erraza</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Replace the existing actions or create your own using plain JavaScript
-                                (using NodeJs). Customize the current editor or create an entire new one that fits your
-                                needs.</p>
+                            <p>Lehendik dauden ekintzak edo berriak sor ditzakezu JavaScript arruntarekin (NodeJs
+                                erabiliz). Aldatu uneko editorea edo zure propioa hutsetik sortu, zure beharretara
+                                egokituz.</p>
                             <a href="http://github.com/ideckia/ideckia_api" target="_blank"
-                                class="btn btn-primary">Check out the API</a>
+                                class="btn btn-primary">Begiratu ezazu APIa</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="my-3 p-3 rounded">
-                <h1 class="pb-2 mb-0 text-white">App Screenshots</h1>
+                <h1 class="pb-2 mb-0 text-white">Aplikazioa</h1>
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
@@ -176,7 +176,7 @@
             </div>
 
             <div class="my-3 p-3 rounded">
-                <h1 class="pb-2 mb-0 text-white">Editor Screenshots</h1>
+                <h1 class="pb-2 mb-0 text-white">Editorea</h1>
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
@@ -194,8 +194,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Created with love from Basque Country by <a href="https://github.com/josuigoa">Josu Igoa</a>
-                    forked from <a
+                <p><a href="https://github.com/josuigoa">Josu Igoak</a> Euskal Herrian maitasunez sortua, forked from <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
