added FixedItems and new screenshots

--- a/index.eu.html
+++ b/index.eu.html
@@ -12,7 +12,7 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css" />
 
         <title>ideckia</title>
 
@@ -66,7 +66,7 @@
 
             </div>
 
-            <div class="row row-cols-2 row-cols-md-3 g-4">
+            <div class="row row-cols-2 row-cols-md-3 g-4 justify-content-around">
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
@@ -122,6 +122,17 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
+                            <h5 class="card-title">Elementu finkoak</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Izan itzazu beti eskura beharrezko elementuak, nahiz eta direktorio
+                                desberdinetan ibili.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
                             <h5 class="card-title">Editor integratua</h5>
                         </div>
                         <div class="card-body">
@@ -169,7 +180,7 @@
                         <img src="src/img/developer.png" class="figure-img img-fluid rounded">
                     </figure>
                     <figure class="figure col-lg-4">
-                        <img src="src/img/meetings.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/streaming.png" class="figure-img img-fluid rounded">
                     </figure>
                 </div>
 
@@ -180,10 +191,10 @@
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
-                        <img src="src/img/main_edit.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
                     </figure>
                     <figure class="figure col-lg-8">
-                        <img src="src/img/meetings_edit.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/main_edit.png" class="figure-img img-fluid rounded">
                     </figure>
                 </div>
 
