--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </div>
 
-            <div class="row row-cols-2 row-cols-md-3 g-4">
+            <div class="row row-cols-2 row-cols-md-3 g-4 justify-content-around">
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
@@ -120,6 +120,17 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
+                            <h5 class="card-title">Fixed items</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Have the necessary items always on hand, even if you explore
+                                different directories.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
                             <h5 class="card-title">Integrated editor</h5>
                         </div>
                         <div class="card-body">
@@ -169,7 +180,7 @@
                         <img src="src/img/developer.png" class="figure-img img-fluid rounded">
                     </figure>
                     <figure class="figure col-lg-4">
-                        <img src="src/img/meetings.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/streaming.png" class="figure-img img-fluid rounded">
                     </figure>
                 </div>
 
@@ -180,10 +191,10 @@
 
                 <div class="row align-items-center">
                     <figure class="figure col-lg-4">
-                        <img src="src/img/main_edit.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/editor_developer.png" class="figure-img img-fluid rounded">
                     </figure>
                     <figure class="figure col-lg-8">
-                        <img src="src/img/meetings_edit.png" class="figure-img img-fluid rounded">
+                        <img src="src/img/main_edit.png" class="figure-img img-fluid rounded">
                     </figure>
                 </div>
 
