--- a/index.html
+++ b/index.html
@@ -50,13 +50,28 @@
                             directory as you want to structure your content to fit your needs. You can use it or
                             automations in gaming, streaming, software development, home...
                         </p>
-                        <p>
-                            <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                        <div class="d-flex">
+                            <div class="w-50"><a
+                                href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
                                 target="_blank">
-                                <img class="w-75" alt="Google play link"
-                                    src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/en_get.svg">
-                            </a>
-                        </p>
+                                <img class="w-75" alt="GitHub release link"
+                                    src="src/img/badges/apk-from-github.png">
+                                </a>
+                            </div>
+                            <!-- <div class="w-50"><a
+                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="Google play link"
+                                        src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/en_get.svg">
+                                </a>
+                            </div>
+                            <div class="w-50"><a
+                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="F-droid link" src="src/img/badges/f-droid_en.png">
+                                </a>
+                            </div> -->
+                        </div>
                     </div>
 
                 </div>
@@ -74,15 +89,15 @@
                             <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable. Download here
                                 for your OS:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-win.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia windows server link" src="src/img/icon/windows.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-macos.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia osx server link" src="src/img/icon/osx.svg">
                             </a>
                         </div>
@@ -138,11 +153,11 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Open source</h5>
+                            <h5 class="card-title">Free software</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">The entire stack is open source: server, editor, api, actions and
-                                smartphone app.</p>
+                            <p class="card-text">The entire stack is free software: server, editor, api, actions and
+                                smartphone app are licensed by GPL 2.</p>
                             <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Get the
                                 sources</a>
                         </div>
