--- a/index.eu.html
+++ b/index.eu.html
@@ -52,13 +52,28 @@
                             Jokogintzarako, streaming-erako, software garapenerako, etxeko eta hainbat modutako
                             automatizazioetarako erabili daiteke.
                         </p>
-                        <p>
-                            <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                        <div class="d-flex">
+                            <div class="w-50"><a
+                                href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
                                 target="_blank">
-                                <img class="w-75" alt="Google play link"
-                                    src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/eu_get.svg">
-                            </a>
-                        </p>
+                                <img class="w-75" alt="GitHub release link"
+                                    src="src/img/badges/apk-from-github.png">
+                                </a>
+                            </div>
+                            <!-- <div class="w-50">
+                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="Google play link"
+                                        src="https://cdn.rawgit.com/steverichey/google-play-badge-svg/master/img/eu_get.svg">
+                                </a>
+                            </div>
+                            <div class="w-50">
+                                <a href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="F-droid link" src="src/img/badges/f-droid_eu.png">
+                                </a>
+                            </div> -->
+                        </div>
                     </div>
 
                 </div>
@@ -76,15 +91,15 @@
                             <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria.
                                 Zure SE-arentzat deskarga ezazu:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-win.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia windows server link" src="src/img/icon/windows.svg">
                             </a>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-macos.zip"
-                                target="_blank">
+                                target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia osx server link" src="src/img/icon/osx.svg">
                             </a>
                         </div>
@@ -145,10 +160,11 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
-                            <h5 class="card-title">Kode irekia</h5>
+                            <h5 class="card-title">Software librea</h5>
                         </div>
                         <div class="card-body">
-                            <p>Guztiz kode irekia: zerbitzaria, editorea, api-a, ekintzak eta smartphone aplikazioa.</p>
+                            <p>Software guztiz librea: zerbitzaria, editorea, api-a, ekintzak eta smartphone aplikazioa
+                                GPL 2 lizentziapean daude.</p>
                             <a href="http://github.com/ideckia/" target="_blank" class="btn btn-primary">Lortu kodea</a>
                         </div>
                     </div>
