add binary size

--- a/index.eu.html
+++ b/index.eu.html
@@ -54,10 +54,10 @@
                         </p>
                         <div class="d-flex">
                             <div class="w-50"><a
-                                href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                target="_blank">
-                                <img class="w-75" alt="GitHub release link"
-                                    src="src/img/badges/apk-from-github.png">
+                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="GitHub release link"
+                                        src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
                             <!-- <div class="w-50">
@@ -88,8 +88,8 @@
                             <h5 class="card-title">Plataforma anitza</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria.
-                                Zure SE-arentzat deskarga ezazu:</p>
+                            <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria
+                                (&lt;35MB). Zure SE-arentzat deskarga ezazu:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
