--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                         </p>
                         <div class="d-flex">
                             <div class="w-50"><a
-                                href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
-                                target="_blank">
-                                <img class="w-75" alt="GitHub release link"
-                                    src="src/img/badges/apk-from-github.png">
+                                    href="https://github.com/ideckia/mobile_client/releases/latest/download/ideckia-release.apk"
+                                    target="_blank">
+                                    <img class="w-75" alt="GitHub release link"
+                                        src="src/img/badges/apk-from-github.png">
                                 </a>
                             </div>
                             <!-- <div class="w-50"><a
@@ -86,8 +86,8 @@
                             <h5 class="card-title">Cross-platform</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable. Download here
-                                for your OS:</p>
+                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;35MB).
+                                Download here for your OS:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
