--- a/index.eu.html
+++ b/index.eu.html
@@ -221,7 +221,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p><a href="https://github.com/josuigoa">Josu Igoak</a> Euskal Herrian maitasunez sortua, forked from <a
+                <p>Forked from <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
