--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
         <footer class="text-muted py-5" style="background-color: black;">
             <div class="container text-white">
 
-                <p>Created with love from Basque Country by <a href="https://github.com/josuigoa">Josu Igoa</a>
-                    forked from <a
+                <p>Forked from <a
                         href="https://github.com/alexandresanlim/MobileApp.SimpleLandingPage.Template">Github</a>.</p>
             </div>
         </footer>
