--- a/index.eu.html
+++ b/index.eu.html
@@ -111,9 +111,9 @@
                             <h5 class="card-title">Aukera amaigabeak</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Komandoak exekutatu, tekla-lasterrak sortu, OBS Studio kontrolatu,
-                                ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea zure lana logeatu, ausazko
-                                koloreak sortu...</p>
+                            <p class="card-text">Komandoak exekutatu, tekla-lasterrak sortu, mikrofonoa mututu, OBS
+                                Studio kontrolatu, ordu-zonak, eguraldia, atzera-kontaketa, tenporizadorea zure lana
+                                logeatu, ausazko koloreak sortu...</p>
 
                             <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#defektuzko-ekintzak"
                                 target="_blank" class="btn btn-primary">Ekintzen zerrenda</a>
