--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             <h5 class="card-title">Endless possibilities</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Execute commands, create key shortcuts, control OBS Studio, timezones,
-                                weather, countdown, timer, log your work, create random colors...</p>
+                            <p class="card-text">Execute commands, create key shortcuts, mute microphone, control OBS
+                                Studio, timezones, weather, countdown, timer, log your work, create random colors...</p>
                             <a href="https://github.com/ideckia/ideckia#default-actions" target="_blank"
                                 class="btn btn-primary">Actions list</a>
                         </div>
