link "create actions" instead of api

--- a/index.eu.html
+++ b/index.eu.html
@@ -178,8 +178,8 @@
                             <p>Lehendik dauden ekintzak edo berriak sor ditzakezu JavaScript arruntarekin (NodeJs
                                 erabiliz). Aldatu uneko editorea edo zure propioa hutsetik sortu, zure beharretara
                                 egokituz.</p>
-                            <a href="http://github.com/ideckia/ideckia_api" target="_blank"
-                                class="btn btn-primary">Begiratu ezazu APIa</a>
+                            <a href="https://github.com/ideckia/ideckia/blob/master/README.eu.md#zure-ekintza-propioa-sortzen"
+                                target="_blank" class="btn btn-primary">Sortu zure ekintzak</a>
                         </div>
                     </div>
                 </div>
