--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                             <p class="card-text">Replace the existing actions or create your own using plain JavaScript
                                 (using NodeJs). Customize the current editor or create an entire new one that fits your
                                 needs.</p>
-                            <a href="http://github.com/ideckia/ideckia_api" target="_blank"
-                                class="btn btn-primary">Check out the API</a>
+                            <a href="https://github.com/ideckia/ideckia#create-your-own-action" target="_blank"
+                                class="btn btn-primary">Create your actions</a>
                         </div>
                     </div>
                 </div>
