added multi-state, multi-action

--- a/index.eu.html
+++ b/index.eu.html
@@ -137,6 +137,17 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
+                            <h5 class="card-title">Egoera anitzeko elementuak, ekintza anitzeko egoerak.</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Aldatu item-aren egoera (testua, ikonoa...) klik egitean. Exekutatu
+                                ekintza bat edo gehiago egoera bakoitzeko.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
                             <h5 class="card-title">Elementu finkoak</h5>
                         </div>
                         <div class="card-body">
