--- a/index.html
+++ b/index.html
@@ -130,6 +130,17 @@
                 <div class="col">
                     <div class="card h-100 text-center">
                         <div class="card-header">
+                            <h5 class="card-title">Multiple states per item, multiple actions per state</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Change the state (text, icon...) of the item when clicked. Execute
+                                multiple actions per state.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
                             <h5 class="card-title">Fixed items</h5>
                         </div>
                         <div class="card-body">
