--- a/index.eu.html
+++ b/index.eu.html
@@ -38,7 +38,7 @@
 
                     <figure class="figure col-lg-3">
                         <img alt="ideckia logo"
-                            src="https://via.placeholder.com/512x512.png/000000/FFFFFF/?text=APP%20LOGO"
+                            src="src/img/icon/ideckia_opt.svg"
                             class="figure-img img-fluid rounded">
                     </figure>
 
@@ -89,7 +89,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">GNU/Linux, Windows eta OSX-en funtzionatzen du. Guztiz eramangarria
-                                (&lt;35MB). Zure SE-arentzat deskarga ezazu:</p>
+                                (&lt;40MB). Zure SE-arentzat deskarga ezazu:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
                                 <img class="w-25" alt="ideckia linux server link" src="src/img/icon/linux.svg">
@@ -165,6 +165,19 @@
                             <p class="card-text">Internet nabigatzaile bat baldin baduzu, hortxe duzu editorea.
                             </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Editorera
                                 joan</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Elkarrizketa-koadroak</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Ekintzetatik elkarrizketa-koadroak erabil ditzakezu erabiltzaileari informazioa
+                                eskatzeko: testua, pasahitzak, galderak, egun aukeraketa...</p>
+                            <a href="https://github.com/ideckia/ideckia_api/blob/develop/api/dialog/IDialog.hx"
+                                target="_blank" class="btn btn-primary">Ekarrizketa-koadroen definizioa</a>
                         </div>
                     </div>
                 </div>
