--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <figure class="figure col-lg-3">
                         <img alt="ideckia logo"
-                            src="https://via.placeholder.com/512x512.png/000000/FFFFFF/?text=APP%20LOGO"
+                            src="src/img/icon/ideckia_opt.svg"
                             class="figure-img img-fluid rounded">
                     </figure>
 
@@ -86,7 +86,7 @@
                             <h5 class="card-title">Cross-platform</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;35MB).
+                            <p class="card-text">Works on GNU/Linux, Windows and OSX. Totally portable (&lt;40MB).
                                 Download here for your OS:</p>
                             <a href="https://github.com/ideckia/ideckia/releases/latest/download/ideckia-linux.zip"
                                 target="_blank" class="text-decoration-none">
@@ -158,6 +158,19 @@
                             <p class="card-text">If you have a internet browser, you have the editor right there.
                             </p><a href="http://localhost:8888/editor" target="_blank" class="btn btn-primary">Go to
                                 the editor</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Dialogs</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">You can use dialogs from actions to request user input: text, password,
+                                questions, calendar...</p>
+                            <a href="https://github.com/ideckia/ideckia_api/blob/develop/api/dialog/IDialog.hx"
+                                target="_blank" class="btn btn-primary">Dialogs definition</a>
                         </div>
                     </div>
                 </div>
